--- a/pom.xml
+++ b/pom.xml
@@ -18,11 +18,11 @@
 
 	<modelVersion>4.0.0</modelVersion>
 	
-	<name>Acme-Recipes</name>
+	<name>Acme-Exam-September</name>
 	<description>This is a Hello-World project for the students of Design &amp; Testing.</description>
 
 	<groupId>Acme</groupId>	
-	<artifactId>Acme-Recipes-22.8</artifactId>
+	<artifactId>Acme-Exam-September</artifactId>
 	<version>22.8</version>
 	<packaging>war</packaging>
 
