--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,8 +12,8 @@
 
 # HINT: insert your required application properties here
 
-spring.application.display-name = Acme Recipes
-spring.application.name = Acme-Recipes
+spring.application.display-name = Acme Exam September
+spring.application.name = Acme-Exam-September
 spring.application.version = 22.8
 
 # HINT: don't forget to include the base properties provided by the framework.
